# template-python-lib

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  justfile  pyproject.toml  zensical.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
docs/: api.md  index.md
src/mylib/: __init__.py
tests/: test_core.py
